[gd_scene load_steps=13 format=2]

[ext_resource path="res://menus/MainMenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://fonts/forced square/forced_square.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://fonts/forced square/forced_square_small.tres" type="DynamicFont" id=3]
[ext_resource path="res://theme/MainTheme.tres" type="Theme" id=4]
[ext_resource path="res://textures/hit.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 42
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.435294, 0.435294, 0.435294, 1 )
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.784314, 0.784314, 0.784314, 1 )
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="Animation" id=6]
resource_name = "idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TextBlocky:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 156.789, 38.7198 ), Vector2( 160.862, 30.5748 ), Vector2( 165.507, 33.501 ), Vector2( 154.668, 32.7298 ) ]
}

[sub_resource type="Animation" id=7]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Title:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("StartButton:rect_position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -194, -0.25, 0, 0.06, 190.5, 0, -0.62, -0.51141, 0.25, 0 ),
"times": PoolRealArray( 0, 0.9 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("StartButton:rect_position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 84, -0.25, 0, 0.25, 0, 84, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("AudioButton:rect_position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( -195.053, -0.25, 0, 0.25, 0, -195.053, -0.25, 0, 0.08, 220.906, 0.601, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 1, 1.1 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("AudioButton:rect_position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 114, -0.25, 0, 0.25, 0, 114, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("TextBlocky:rect_position:x")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 383.398, -0.25, 0, 0.59, -2.41376, 156.789, -0.33, -76.4768, 0.25, 0 ),
"times": PoolRealArray( 0, 0.8 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("TextBlocky:rect_position:y")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 249.05, -0.25, 0, 0.69, -2.84978, 38.7198, -0.51, -72.4556, 0.25, 0 ),
"times": PoolRealArray( 0, 0.8 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("ControllerButton:rect_position:x")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( -195.053, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.1 )
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("ControllerButton:rect_position:y")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( 144, -0.25, 0, 0.25, 0, 144, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.9 )
}

[node name="MainMenu" type="Control" groups=[
"save",
]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.231373, 0.243137, 0.262745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="RichTextLabel" parent="."]
anchor_left = 0.065
anchor_top = 0.089
anchor_right = 0.731
anchor_bottom = 0.349
margin_left = 0.150042
margin_top = 0.0746689
margin_right = 0.0300446
margin_bottom = -0.00533295
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center][wave]PONGO!!!"
text = "PONGO!!!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextBlocky" type="TextureRect" parent="."]
modulate = Color( 0.811765, 0.811765, 0.811765, 1 )
anchor_right = 0.328
anchor_bottom = 0.278
margin_left = 121.0
margin_top = 64.0
margin_right = 187.04
margin_bottom = 118.176
rect_rotation = -35.0
rect_pivot_offset = Vector2( 55, 40 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_top = 0.404
anchor_right = 0.375
anchor_bottom = 0.5
margin_top = -0.0320053
theme = ExtResource( 4 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 3 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioButton" type="Button" parent="."]
anchor_top = 0.548
anchor_right = 0.375
anchor_bottom = 0.644
margin_top = 0.0159988
margin_right = -3.8147e-05
margin_bottom = 0.0479584
theme = ExtResource( 4 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 3 )
text = "Audio"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControllerButton" type="Button" parent="."]
anchor_top = 0.692
anchor_right = 0.375
anchor_bottom = 0.788
margin_top = 0.0639954
margin_bottom = 0.095993
theme = ExtResource( 4 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 3 )
text = "Controls"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 6 )
anims/init = SubResource( 7 )

[node name="Camera2D" type="Camera2D" parent="."]
pause_mode = 2
position = Vector2( 160, 104 )
current = true
smoothing_enabled = true
__meta__ = {
"_editor_description_": ""
}
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="AudioButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="ControllerButton" to="." method="_on_ControllerButton_pressed"]
